--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.6.2",
